# bt-esp-ctrl-term

./: pyproject.toml
bt_esp_ctrl_term/: main.py  scan.py
