[tool.poetry]
name = "bt-esp-ctrl-term"
version = "0.1.0"
description = ""
authors = ["Abhinav Pandey <121815498+LanceHoenhymm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bleak = { version = "*", python = ">=3.12,<3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
